--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+@theme {
+  --font-title: "Inter", sans-serif;
+  --font-content: "Fira Code", sans-serif;
+
+  --animate-my-pulse: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+
+  @keyframes pulse {
+    50% {
+      opacity: 0.3;
+    }
+  }
+}
