Update Hero Section

--- a/style.css
+++ b/style.css
@@ -4,11 +4,18 @@
   --font-title: "Inter", sans-serif;
   --font-content: "Fira Code", sans-serif;
 
-  --animate-my-pulse: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  --animate-my-bounce: bounce 3s infinite;
 
-  @keyframes pulse {
+  @keyframes bounce {
+    0%,
+    100% {
+      transform: translateY(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+
     50% {
-      opacity: 0.3;
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
   }
 }
